--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,14 @@
   "cSpell.words": [
     "contenteditable",
     "destyle",
+    "gsap",
     "hamayouresort",
     "Izumi",
     "kaku",
     "kuwarubi",
     "Maru",
     "Navi",
+    "notranslate",
     "rubi",
     "stylable",
     "styleable"
