GSAPとSwiperを統合したメインスライダーコンポーネントを実装
- ホームページ体験を向上させるための新しいメインスライダーコンポーネントを追加。
- 煙のアニメーション効果にはGSAPを、スライド遷移にはSwiperを統合。
- パッケージの依存関係をアップデートし、GSAPとSwiperを含めるようにした。
- index.astroを新しいメインスライダーコンポーネントを使用するようにリファクタリングし、コード構成を改善。

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "astro": "^5.12.8",
-    "sass": "^1.89.2"
+    "gsap": "^3.14.2",
+    "sass": "^1.89.2",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.14.1"
